--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -26,7 +26,7 @@
                 <p>MY PORTOFOLIO</p>
             </div>
             <div class="image">
-                <img src="./Ninja Ken.PNG" alt="">
+                <img src="Ninja Ken.PNG" alt="">
             </div>
 
         </div>
@@ -37,15 +37,15 @@
         <div class="proyek-wrapper">
             <h3 class="section-title">Proyek Contoh</h3>
 			<div class="proyek-image">
-				<img src="./1.PNG">
+				<img src="1.PNG">
 				<p>Image 1</p>
 			</div>
 			<div class="proyek-image">
-			    <img src="./2.PNG">
+			    <img src="2.PNG">
 				<p>Image 2</p>
 			</div>
 			<div class="proyek-image">
-				<img src="./3.PNG">
+				<img src="3.PNG">
 				<p>Image 3</p>
 			</div>
         </div>
