--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <title>NINJA KEN</title>
+	    <title>Proyek HTML&CSS</title>
         <Link rel="stylesheet" href="stylesheet.css">
 
     </head>
@@ -26,7 +26,7 @@
                 <p>MY PORTOFOLIO</p>
             </div>
             <div class="image">
-                <img src="Ninja Ken.PNG" alt="">
+                <img src="Ninja Ken.png" alt="">
             </div>
 
         </div>
@@ -37,15 +37,15 @@
         <div class="proyek-wrapper">
             <h3 class="section-title">Proyek Contoh</h3>
 			<div class="proyek-image">
-				<img src="1.PNG">
+				<img src="1.png">
 				<p>Image 1</p>
 			</div>
 			<div class="proyek-image">
-			    <img src="2.PNG">
+			    <img src="2.png">
 				<p>Image 2</p>
 			</div>
 			<div class="proyek-image">
-				<img src="3.PNG">
+				<img src="3.png">
 				<p>Image 3</p>
 			</div>
         </div>
