--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <div class="container">
+            <!--<div class="container">-->
                 <div class="header-logo">NINJA KEN</div>
                 <div class="header-list">
                     <ul>
@@ -18,7 +18,7 @@
                         <li>Hubungi Saya</li>
                     <ul>
                 </div>
-            </div>
+            <!--</div>-->
         </header>
         <div class="top-wrapper">
             <div class="heading">
